--- a/src/Home.css
+++ b/src/Home.css
@@ -127,3 +127,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+.container_headers {
+	position: sticky;
+	top: 0;
+	z-index: 10000;
+}
